<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_item">add</string>
    <string name="removal_question">"All current tasks will be deleted permanently."</string>
    <string name="removal_question_title">"Delete all current tasks?"</string>
    <string name="done">done</string>
    <string name="task">task</string>
    <string name="save">save</string>
    <string name="edit_one_item">edit one task</string>
    <string name="delete">delete</string>
    <string name="photo">photo</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="alarm">alarm</string>
    <string name="choose_date">choose a date</string>
    <string name="enter_task_name">enter task name</string>
    <string name="separator_today">TODAY</string>
    <string name="separator_tomorrow">TOMORROW</string>
    <string name="separator_later">LATER</string>
    <string name="separator_past">PAST</string>
    <string name="delete_all_tasks">delete all tasks</string>
    <string name="delete_all_current_tasks">delete all current tasks</string>
    <string name="delete_all_done_tasks">delete all done tasks</string>
    <string name="completed">COMPLETED</string>
    <string name="subtask">subtask</string>
    <string name="sync">sync</string>
    <string name="add_subtask">add subtask</string>
    <string name="add_task">add task</string>
    <string name="enter_subtask_name">enter subtask name</string>
    <string name="add">add</string>
    <string name="really_exit">Really exit?</string>
    <string name="exit_question">After confirmation, the application will be closed.</string>

</resources>

