<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    app:contentPadding="8dp"
    app:strokeColor="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/undo"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="40dp"
                android:layout_height="wrap_content"

                app:icon="@drawable/ic_undo_accent_24dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/sub_task_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/subtask"
                android:src="@drawable/ic_list_dark_gray_24dp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/alarm_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/alarm"
                android:src="@drawable/ic_notifications_dark_gray_24dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                tools:text="date" />

            <ImageView
                android:id="@+id/delete_done_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete_accent_24dp" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>