<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarBack"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/task"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="?attr/colorPrimaryDark"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="55dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="260dp"
        android:hint="@string/notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.067">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNotes"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="bottom"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveEdit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editDate"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/date"
        app:icon="@drawable/ic_today_dark_gray_24dp"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editAlarm"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:text="@string/time"
        app:icon="@drawable/ic_add_alarm_dark_gray_24dp"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorPrimary"
        app:icon="@drawable/ic_delete_dark_gray_24dp"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/editAlarm" />

    <ImageView
        android:id="@+id/cancelDate"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_cancel_dark_gray_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editDate"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <ImageView
        android:id="@+id/cancelAlarm"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_cancel_dark_gray_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editAlarm"
        app:layout_constraintTop_toBottomOf="@+id/cancelDate" />

</androidx.constraintlayout.widget.ConstraintLayout>